--- a/src/app.css
+++ b/src/app.css
@@ -15,3 +15,12 @@ body {
 	@apply bg-gray-950 text-gray-100;
 	font-feature-settings: "rlig" 1, "calt" 1;
 }
+
+/* Article prose styles */
+.prose a.card-link {
+	@apply text-white underline cursor-pointer font-medium;
+}
+
+.prose a.card-link:hover {
+	@apply text-blue-500;
+}
